@@ -1,20 +1,18 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '0.4.20'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'org.jetbrains.intellij' version '0.6.5'
+//    id 'org.jetbrains.kotlin.jvm' version '1.4.21'
 }
 
 group 'org.easysoc'
 version pluginVersion
-
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.antlr:antlr4-runtime:4.8-1'
+    implementation 'org.antlr:antlr4-runtime:4.8'
     implementation 'org.antlr:antlr4-intellij-adaptor:0.1'
 }
 
@@ -24,29 +22,19 @@ intellij {
     localPath "/home/itviewer/Downloads/software/chip"
 
     // https://blog.jetbrains.com/platform/2019/06/java-functionality-extracted-as-a-plugin/
-    plugins 'PsiViewer:201.6251.22-EAP-SNAPSHOT.3'
+    // plugins 'PsiViewer:201.6251.22-EAP-SNAPSHOT.3'
     downloadSources false
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
 }
 
 runIde {
     // https://confluence.jetbrains.com/display/JBR/JetBrains+Runtime
-    jbrVersion "11_0_6b840.3"
+    jbrVersion "11_0_9b1145.21"
     ideDirectory "/home/itviewer/Downloads/software/chip"
     jvmArgs '-Didea.platform.prefix=Chip'
-    //for jbr11
-    jvmArgs '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED','-Djdk.module.illegalAccess.silent=true'
 }
 
 patchPluginXml {
-    sinceBuild "193"
+    sinceBuild "203"
     untilBuild "203.*"
 }
 
